El archivo ,odea del gitignore fue agregado

--- a/.gitignore
+++ b/.gitignore
@@ -180,4 +180,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+#Miguel
+
+.idea/
+
 # End of https://www.toptal.com/developers/gitignore/api/intellij+iml,macos,eclipse
